<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.open.scdm</groupId>
	<artifactId>ssh-tunnel</artifactId>
	<version>2.0.0</version>
	<packaging>pom</packaging>
	<description>SSH 隧道工具</description>
	<properties>
		<java.version>25</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<lombok.version>1.18.46</lombok.version>
		<mina-sshd.version>2.19.0</mina-sshd.version>
		<logback.version>1.6.3</logback.version>
		<slf4j.version>2.0.18</slf4j.version>
		<vertx.version>5.1.7</vertx.version>

		<maven-compiler-plugin.version>3.16.0</maven-compiler-plugin.version>
		<maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- sshd-core 2.19 传递依赖 slf4j-api/jcl-over-slf4j 1.7.36，
			     按“最近优先”压过 logback 所需的 slf4j-api 2.x，导致运行时
			     报 StaticLoggerBinder 缺失并回退 NOP（无任何日志输出）。
			     统一钉到 slf4j 2.0.x，与 logback-classic 1.6.x 对齐 -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- Apache MINA SSHD：NIO2 异步传输 + 每通道 2MB 流控窗口(默认)，吞吐显著优于 JSch -->
		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-core</artifactId>
			<version>${mina-sshd.version}</version>
		</dependency>
		<!-- sshd 强依赖 slf4j；改用 logback 实现：控制台 + logs/ 文件双输出，
		     按天滚动、保留 30 天，配置见 ssh-common 的 logback.xml -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-core</artifactId>
			<version>${vertx.version}</version>
		</dependency>
	</dependencies>
	<modules>
		<module>ssh-copy-tunnel</module>
		<module>ssh-common</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
					<encoding>UTF-8</encoding>
					<failOnError>true</failOnError>
					<compilerArgs>
						<arg>-nowarn</arg>
					</compilerArgs>
					<!-- JDK 23 起 javac 默认不再扫描 classpath 上的注解处理器，必须显式声明，否则 lombok @Data 不生成方法 -->
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
